--- a/pisound-btn/pisound-btn.1
+++ b/pisound-btn/pisound-btn.1
@@ -1,6 +1,6 @@
 .TH PISOUND-BTN 1
 .SH NAME
-pisound-btn \- Daemon for the Pisound Button. (see https://blokas.io/pisound for more information).
+pisound-btn \- Daemon for the Pisound Button. (see https://blokas.io/pisound/ for more information).
 .SH SYNOPSIS
 .B pisound-btn
 .SH DESCRIPTION
