--- a/pisound-btn/debian/changelog
+++ b/pisound-btn/debian/changelog
@@ -1,3 +1,9 @@
+pisound-btn (1.17-1) UNRELEASED; urgency=low
+
+  * Made compatible with Trixie, libpgiod2 implementation.
+
+ -- Giedrius Trainavičius <giedrius@blokas.io>  Wed, 19 Nov 2025 12:00:50 +0200
+
 pisound-btn (1.16-1) UNRELEASED; urgency=low
 
   * Made compatible with Raspberry Pi 5.
