--- a/pisound-meta/debian/changelog
+++ b/pisound-meta/debian/changelog
@@ -1,3 +1,9 @@
+pisound (1.06-1) UNRELEASED; urgency=low
+
+  * Package versions updated.
+
+ -- Giedrius Trainavičius <giedrius@blokas.io>  Wed, 19 Nov 2025 12:05:55 +0200
+
 pisound (1.05-1) UNRELEASED; urgency=low
 
   * Package versions updated.
